@@ -1,3 +1,8 @@
+202311020
+Add padding to audio CW ident to prevent corruption during switching
+Set pull-ups on the controller and rack shutdown button GPIOs
+Ensure carousel restarts after signal drop during ident
+
 202310220
 Bugfix more than 9 carousel scenes
 
